--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,14 @@ html, body {
   height: 100%;
 }
 
+body {
+  background-color: #181818;
+}
+
 * {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #fff;
+  letter-spacing: 1px;
 }
 
 #nowPlayingBarcontainer {
@@ -144,4 +149,212 @@ html, body {
 
 .volumeBar .progressBar {
   width: 120px;
+}
+
+#topContainer {
+  min-height: 100%;
+  width: 100%;
+}
+
+#navBarContainer {
+  background-color: #000;
+  width: 220px;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+#navBarContainer .logo img {
+  width: 40px;
+  height: 100%;
+  margin-bottom: 20px;
+}
+
+.navBar {
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  -ms-flex-dirextion: column;
+}
+
+.navBar .group {
+  border-top: 1px solid #a0a0a0;
+  padding: 10px 0;
+}
+
+.navItem {
+  padding: 10px 0;
+  font-size: 14px;
+  font-weight: 700;
+  display: block;
+  letter-spacing: 1px;
+  position: relative;
+}
+
+.navItemLink {
+  color: #a0a0a0;
+  text-decoration: none;
+}
+
+.navItemLink:hover {
+  color: #fff;
+}
+
+.navItemLink .icon {
+  position: absolute;
+  right: 0;
+  top: 6px;
+  width: 25px;
+}
+
+#mainViewContainer {
+  margin-left: 220px;
+  padding-bottom: 90px;
+  width: calc(100% - 220px);
+}
+
+#mainContent {
+  padding: 0 20px;
+}
+
+.pageHeadingBig {
+  padding: 20px;
+  text-align: center;
+}
+
+.gridViewItem {
+  display: inline-block;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  width: 29%;
+  max-width: 200px;
+  min-width: 150px;
+}
+
+.gridViewItem img {
+  width: 100%;
+}
+
+.gridViewInfo {
+  font-weight: 300;
+  text-align: center;
+  padding: 5px 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.gridViewItem a {
+  text-decoration: none;
+}
+
+.entityInfo {
+  padding: 40px 0 10px 0;
+  display: inline-block;
+  width: 100%;
+}
+
+.entityInfo .leftSection {
+  width: 30%;
+  float: left;
+  max-width: 250px;
+}
+
+.entityInfo .leftSection img {
+  width: 100%;
+}
+
+.entityInfo .rightSection {
+  width: 70%;
+  float: left;
+  padding: 5px 10px 5px 40px;
+  box-sizing: border-box;
+}
+
+.entityInfo .rightSection h2 {
+  margin-top: 0px;
+}
+
+.entityInfo .rightSection p {
+  color: #939393;
+  font-weight: 200;
+}
+
+.trackList {
+  padding: 0;
+}
+
+.tracklistRow {
+  height: 40px;
+  padding: 15px 10px;
+  list-style: none;
+}
+
+.tracklistRow span {
+  color: #939393;
+  font-weight: 200;
+}
+
+.tracklistRow:hover {
+  background-color: #282828;
+}
+
+.tracklistRow .trackCount {
+  width: 8%;
+  float: left;
+}
+
+.tracklistRow .trackCount img {
+  width: 20px;
+  visibility: hidden;
+  position: absolute;
+  cursor: pointer;
+}
+
+.tracklistRow:hover .trackCount img {
+  visibility: visible;
+}
+
+.tracklistRow:hover .trackCount span {
+  visibility: visible;
+}
+
+.tracklistRow:hover .trackCount span {
+  visibility: hidden;
+}
+
+.tracklistRow .trackInfo {
+  width: 75%;
+  float: left;
+}
+
+.tracklistRow .trackInfo span {
+  display: block;
+}
+
+.tracklistRow .trackOptions {
+  width: 8px;
+  float: left;
+  text-align: right;
+}
+
+.tracklistRow .trackOptions img {
+  width: 15px;
+  visibility: hidden;
+}
+
+.tracklistRow:hover .trackOptions img {
+  visibility: visible;
+}
+
+.tracklistRow .trackDuration {
+  width: 12%;
+  float: left;
+  text-align: right;
+}
+
+.tracklistRow .trackInfo .trackName {
+  color: #fff;
+  margin-bottom: 7px;
 }
